--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
                     <td id="muneA"><button class="buttonClass" onclick="showtableA()"><div style="writing-mode:vertical-lr;white-space: pre;padding-left: 8px;
                         margin-right: -6px;">干果</div></button></td>
                     <td id="muneB"><button class="buttonClass" onclick="showtableB()"><div style="writing-mode:vertical-lr;white-space: pre;padding-left: 8px;
-                        margin-right: -6px;">饮料</div></button></td>
+                        margin-right: -6px;">肉类</div></button></td>
                     <td id="muneC"><button class="buttonClass" onclick="showtableC()"><div style="writing-mode:vertical-lr;white-space: pre;padding-left: 8px;
-                        margin-right: -6px;">卤味</div></button></td>
+                        margin-right: -6px;">饮料</div></button></td>
                     <td id="muneD"><button class="buttonClass" onclick="showtableD()"><div style="writing-mode:vertical-lr;white-space: pre;padding-left: 8px;
                         margin-right: -6px;">其他</div></button></td>
                     <td id="muneE" style="border-right: 1px solid black; width: 17%;"><button class="buttonClass" onclick="showtableE()">膨化<br>食品</button></td>
